Fix Cart position on mobile and redirect to home in admin page if not admin

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -52,8 +52,4 @@
   }
 }
 
-@media (max-width: 380px) {
-  .container {
-    left: .1rem;
-  }
-}
+
